--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Coding Interview Backend Level 3",
   "main": "src/index.ts",
   "scripts": {
-    "test": "jest e2e"
+    "test": "tsc && jest e2e",
+    "compileAndRun": "tsc && node src/index.js"
   },
   "author": "El Dorado Dev Team",
   "license": "ISC",
@@ -14,9 +15,18 @@
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "mocha": "^10.7.0",
-    "typescript": "^5.5.4"
+    "prettier": "3.5.1",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@hapi/hapi": "^21.3.10"
+    "@hapi/hapi": "^21.3.10",
+    "@types/node": "^22.13.4",
+    "@types/pg": "^8.11.11",
+    "dotenv": "^16.4.7",
+    "joi": "^17.13.3",
+    "pg": "^8.13.3",
+    "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20"
   }
 }
